# clawdboz

./: .bots.md  .gitignore  MANIFEST.in  README.md  bot_manager.sh  pyproject.toml
clawdboz/: __init__.py  acp_client.py  cli.py  simple_bot.py
clawdboz/.kimi/skills/auto-test/: SKILL.md  auto_test.py
clawdboz/.kimi/skills/scheduler/: SKILL.md  scheduler.py
clawdboz/templates/: .bots.md  bot0.py  bot_manager.sh
feishu_tools/: __init__.py  notify_feishu.py
scripts/: bump_version.py
